--- a/musikkollen/package.json
+++ b/musikkollen/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "js-sha256": "^0.9.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
@@ -41,9 +42,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off",
-      "no-unused-vars": "off",
-      "vue/no-unused-vars": "off"
+      "no-unused-vars": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
