--- a/musikkollen/package.json
+++ b/musikkollen/package.json
@@ -43,6 +43,7 @@
     ],
     "rules": {
       "no-unused-vars": "off",
+      "no-console": "off",
       "no-console": "off"
     },
     "parserOptions": {
